--- a/users/static/users/style.css
+++ b/users/static/users/style.css
@@ -1,6 +1,6 @@
 div.main_page {
-    width: 800px;
-    margin: 0 auto;
+    width: 500px;
+    margin: auto;
     /* text-align: center; */
 }
 .row {
